Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.

VERSION NEXT
  FEATURES:
    * New "Playlist Length" constraint for the APG, which allows you to specify
      the number of tracks in the playlist.  What was the "Playlist Length"
      constraint is now called "Playlist Duration".

  CHANGES:

  BUGFIXES:
    * Fix bug where users could drag applets around indiscriminately
    * FLAC BPM tags could be read incorrectly. (BR 234166)


VERSION 2.3.2
  FEATURES:

  CHANGES:
    * Bumped libMTP dependency to version 1.0.0.
    * Improved response of current track and albums applet on data updates.
    * Use system date/time format for default name when saving user playlists.

  BUGFIXES:
    * Fixed incorrect size of the VideoClip applet. (BR 247097)
    * Comments embedded in files that contained newlines or tabs could be
      skipped entirely. (BR 223502)
    * The equalizer dialog did not discard changes when clicking "Cancel".
      Patch by Anton Gritsay <anton@angri.ru>. (BR 242730)
    * The Last.fm service did not work without KWallet. (BR 235861)
    * Show actual KDE version in the "About Amarok" dialog, instead of the
      version used at compile time.
    * Fixed a crash when trying to save a playlist to a file where the format
      of the playlist was unknown. (BR 246168)
    * Also use podcast channel image for downloaded episodes. (BR 229391)
    * Collection directories that were symlinks could end up storing the wrong
      absolute path, causing those files to be removed during incremental
      scans.
    * Fixed playlist tooltips not showing up, even when enabled in the playlist
      layout (BR 249086)
    * Fixed potential crashes related to Applet loading. (BR 246756)
    * Fixed possible crash in Labels Applet when playing new track. (BR 248538)
    * Fixed incorrect layout of applets on startup.
    * Fixed Collection Browser not properly updating after a full rescan,